Menu to Game Mode Fixed

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/_Levels/Maps/BattleGrounds.BattleGrounds
+GameDefaultMap=/Game/_Levels/Menus/MainMenu.MainMenu
 EditorStartupMap=/Game/_Levels/Maps/BattleGrounds.BattleGrounds
 GlobalDefaultGameMode=/Script/TheGame.DefaultGameMode
 bOffsetPlayerGamepadIds=True
