On Death Animation and Return to Main Menu

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -22,10 +22,9 @@ r.SkinCache.CompileShaders=True
 r.RayTracing=False
 
 [/Script/Engine.Engine]
-+ActiveClassRedirects=(OldClassName="TheGameCharacter",NewClassName="Ranger")
 +ActiveClassRedirects=(OldClassName="GameModes/DefaultGameMode.h",NewClassName="Modes/DefaultGameMode.h")
-+ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/TheGame")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/TheGame")
-+ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="TheGameGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="TheGameCharacter")
++ActiveClassRedirects=(OldClassName="/Game/_Actors/Godzilla/Animations/Standard/Megagorgon_Death",NewClassName="/Game/_Actors/Godzilla/Animations/Movment/Die")
++ActiveClassRedirects=(OldClassName="Animations/Standard/Megagorgon_Death",NewClassName="Animations/Movment/Die")
++ActiveClassRedirects=(OldClassName="Megagorgon_Death",NewClassName="Die")
 
