--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/_Levels/Menus/MainMenu.MainMenu
+GameDefaultMap=/Game/_Menus/MainMenu.MainMenu
 EditorStartupMap=/Game/_Levels/Maps/BattleGrounds.BattleGrounds
 GlobalDefaultGameMode=/Script/TheGame.DefaultGameMode
 bOffsetPlayerGamepadIds=True
@@ -22,9 +22,14 @@ r.SkinCache.CompileShaders=True
 r.RayTracing=False
 
 [/Script/Engine.Engine]
++ActiveClassRedirects=(OldClassName="DefaultUI",NewClassName="DefaultHUD")
++ActiveClassRedirects=(OldClassName="/Game/_Levels/Menus/MainMenu",NewClassName="/Game/_Menus/MainMenu")
 +ActiveClassRedirects=(OldClassName="GameModes/DefaultGameMode.h",NewClassName="Modes/DefaultGameMode.h")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="TheGameCharacter")
-+ActiveClassRedirects=(OldClassName="/Game/_Actors/Godzilla/Animations/Standard/Megagorgon_Death",NewClassName="/Game/_Actors/Godzilla/Animations/Movment/Die")
-+ActiveClassRedirects=(OldClassName="Animations/Standard/Megagorgon_Death",NewClassName="Animations/Movment/Die")
++ActiveClassRedirects=(OldClassName="/Game/_Actors/Godzilla/Animations/Standard/Megagorgon_Death",NewClassName="/Game/_Actors/Godzilla/Animations/Movement/Die")
++ActiveClassRedirects=(OldClassName="Animations/Standard/Megagorgon_Death",NewClassName="Animations/Movement/Die")
 +ActiveClassRedirects=(OldClassName="Megagorgon_Death",NewClassName="Die")
+
+[/Script/UnrealEd.CookerSettings]
+bCookOnTheFlyForLaunchOn=True
 
