Game Over Screen Added

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/_Menus/MainMenu.MainMenu
 EditorStartupMap=/Game/_Levels/Maps/BattleGrounds.BattleGrounds
-GlobalDefaultGameMode=/Script/TheGame.DefaultGameMode
+GlobalDefaultGameMode=/Script/Engine.GameMode
 bOffsetPlayerGamepadIds=True
 bUseSplitscreen=False
 
