--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ Content/StarterContent/*
 Content/MegascansMeadowPack/*
 Content/ParagonGreystone/*
 Content/Ninja_Starter/*
+EXE/*
 
 # ===============================================
 
